--- a/Dev2AssessorApp/Src/FindingScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/FindingScreen.fx.yaml
@@ -87,28 +87,6 @@ FindingScreen As screen:
                 Y: =20
                 ZIndex: =5
 
-            icoNotificationHeaderPFS_3 As icon.Bell:
-                Color: =RGBA(255, 191, 0, 1)
-                Height: =ctnHeaderFS.Height/2.2
-                Icon: =Icon.Bell
-                Visible: =false
-                Width: =ctnHeaderFS.Width/30
-                X: =lblUsernameHeaderPFS_3.Width+lblUsernameHeaderPFS_3.X
-                Y: =ctnHeaderFS.Height/4
-                ZIndex: =7
-
-            iconSignoutHeaderPFS_3 As icon.Bell:
-                Color: =RGBA(255, 255, 255, 1)
-                Height: =ctnHeaderFS.Height/2.4
-                Icon: =Icon.NextArrow
-                PaddingBottom: =5
-                Rotation: =90
-                Visible: =false
-                Width: =ctnHeaderFS.Width-(imgLogoPFS_3.Width+lblAssessmentPFS_3.Width+imgUserHeaderPFS_3.Width+lblUsernameHeaderPFS_3.Width+icoNotificationHeaderPFS_3.Width)
-                X: =icoNotificationHeaderPFS_3.X+icoNotificationHeaderPFS_3.Width
-                Y: =ctnHeaderFS.Height/4
-                ZIndex: =8
-
             cn As Component2:
                 X: =lblUsernameHeaderPFS_3.Width+lblUsernameHeaderPFS_3.X
                 Y: =(ctnHeaderDS.Height-Self.Height)/2
@@ -203,29 +181,6 @@ FindingScreen As screen:
                         OnTimerEnd: =Set(Q,true)
                         Visible: =false
                         ZIndex: =2
-
-                ctnStatusPFS_3 As groupContainer.verticalAutoLayoutContainer:
-                    AlignInContainer: =AlignInContainer.SetByContainer
-                    FillPortions: =0
-                    Height: =80
-                    LayoutAlignItems: =LayoutAlignItems.End
-                    LayoutDirection: =LayoutDirection.Vertical
-                    LayoutGap: =10
-                    LayoutJustifyContent: =LayoutJustifyContent.Center
-                    LayoutMinHeight: =100
-                    LayoutMinWidth: =250
-                    LayoutMode: =LayoutMode.Auto
-                    LayoutWrap: =true
-                    PaddingLeft: =40
-                    PaddingRight: =40
-                    Visible: =false
-                    Width: =Parent.Width/2
-                    Y: =ctnHeaderFS.Y+ctnHeaderFS.Height
-                    ZIndex: =2
-
-                    compOnoffStatus_3 As Component1_7:
-                        LayoutMinHeight: =640
-                        LayoutMinWidth: =640
 
             ctnCheckpointPFS_3 As groupContainer.verticalAutoLayoutContainer:
                 AlignInContainer: =AlignInContainer.SetByContainer
@@ -411,18 +366,6 @@ FindingScreen As screen:
                 Width: =ctnMiddleAS.Width
                 ZIndex: =9
 
-                lblSectionAS_3 As label:
-                    Color: =RGBA(209, 19, 19, 1)
-                    FontWeight: =FontWeight.Bold
-                    Height: =ctnSectionAS_4.Height
-                    PaddingLeft: =20
-                    Size: =AllScreensCSS.RLabelFontSize
-                    Text: ="Section"
-                    Visible: =false
-                    Width: =ctnSectionAS_4.Width/8
-                    X: =60
-                    ZIndex: =1
-
                 lblSectionname_4 As label:
                     Color: =RGBA(209, 19, 19, 1)
                     FillPortions: =1
@@ -542,15 +485,6 @@ FindingScreen As screen:
                         X: =0//(Parent.Width -Self.Width)/2
                         ZIndex: =2
 
-                    iconLinePFS_6 As icon.HorizontalLine:
-                        Color: =RGBA(0, 0, 0, 1)
-                        Fill: =RGBA(0, 0, 0, 1)
-                        Height: =4
-                        Icon: =Icon.HorizontalLine
-                        Visible: =//C
-                        Width: =Parent.Width/3
-                        ZIndex: =3
-
                 Container12_5 As groupContainer.verticalAutoLayoutContainer:
                     AlignInContainer: =AlignInContainer.Start
                     Fill: =If(C =true ,WhiteSmoke,RGBA(204, 204, 204, 1))
@@ -592,17 +526,6 @@ FindingScreen As screen:
                                     checkpointItemId.checkpointItemId = varCheckpointitemID && bankUnitId.Id = varBankUnitId && assignmentId.isCompleted = "Completed"))>0,true,false)
                         Width: =200//Parent.Width/1.02
                         ZIndex: =2
-
-                    iconLinePFS_7 As icon.HorizontalLine:
-                        AlignInContainer: =AlignInContainer.Stretch
-                        Color: =RGBA(0, 0, 0, 1)
-                        Fill: =RGBA(0, 0, 0, 1)
-                        Height: =4
-                        Icon: =Icon.HorizontalLine
-                        Visible: |
-                            =//If(C=true,false,true)
-                        Width: =Parent.Width/3
-                        ZIndex: =3
 
             Container7_3 As groupContainer.manualLayoutContainer:
                 ContentLanguage: =" "
@@ -1704,8 +1627,11 @@ FindingScreen As screen:
                                 BorderThickness: =4
                                 Height: =Min(Self.Width, Parent.TemplateHeight - 115)
                                 Image: |-
-                                    =//If(IsBlank(UploadedImage1),SampleImage,UploadedImage1)
-                                    If(IsBlank(UploadedImage1_2),ThisItem.Image,UploadedImage1_2)
+                                    =If(
+                                        IsBlank(UploadedImage1_2),
+                                        ThisItem.Image,
+                                        UploadedImage1_2
+                                    )
                                 OnSelect: |-
                                     =//for reset ideal timer
                                     Reset(tmr_logout);
